--- a/common.css
+++ b/common.css
@@ -17,13 +17,23 @@ h1 {
 }
 
 h2 {
-  font-size: 24;
+  font-size: 16;
+  color: firebrick;
+  letter-spacing: 2px;
+}
+
+h3 {
+  font-size: 10;
   color: firebrick;
   letter-spacing: 2px;
 }
 
 p.linespace{
   line-height: 1.75;
+}
+
+.boxed {
+  background-color: grey;
 }
 
 .button1{
@@ -47,6 +57,6 @@ p.linespace{
 }
 
 .footer  {
-    font-size: 8px;
+    font-size: 9px;
     text-align: left;
 }
